добавлен конфиг-сервер и рест с криптооперациями
