# project-work/eba-api/src/main/resources/api.yaml
@@ -15,14 +15,16 @@ tags:
     description: 'The Persons API'
   - name: Verification
     description: 'The Verification API'
+  - name: Crypto
+    description: 'The Cryptography API'
 
 paths:
   /api/v1/eba/users:
     get:
       tags:
         - Person
-      summary: 'Сохрфнение/Обновление пользователей'
-      description: 'Сохраняет или обновляет переданного пользователя'
+      summary: 'Получение пользователей'
+      description: 'Возвращает всех пользователей'
       operationId: getAll
       responses:
         '200':
@@ -36,7 +38,7 @@ paths:
     post:
       tags:
         - Person
-      summary: 'Сохрфнение/Обновление пользователей'
+      summary: 'Сохранение/Обновление пользователя'
       description: 'Сохраняет или обновляет переданного пользователя'
       operationId: savePerson
       requestBody:
@@ -56,8 +58,8 @@ paths:
     post:
       tags:
         - Verification
-      summary: 'Сохрфнение/Обновление пользователей'
-      description: 'Сохраняет или обновляет переданного пользователя'
+      summary: 'Аутентифицирует пользователя'
+      description: 'Аутентификация пользователя'
       operationId: verify
       requestBody:
         content:
@@ -72,13 +74,45 @@ paths:
               schema:
                 $ref: '#/components/schemas/VerificationResultDto'
 
+  /api/v1/eba/crypto/keys:
+    get:
+      tags:
+        - Crypto
+      summary: 'Генерация ключей криптографии'
+      description: 'Генерация Открытого и Закрытого ключей'
+      operationId: generateKeys
+      responses:
+        '200':
+          description: Success
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/CryptoKeysDto'
+  /api/v1/eba/crypto/tools/cipher:
+    post:
+      tags:
+        - Crypto
+      summary: 'Тулза шифрования'
+      description: 'Шифрование и дешифрование разными ключами'
+      operationId: processOperation
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/CipherToolDto'
+      responses:
+        '200':
+          description: Success
+          content:
+            text/plain:
+              schema:
+                type: string
 
 components:
   schemas:
-
     VerificationDto:
-      title: Верификация
-      description: дтошка проверки авторизации
+      title: 'Верификация'
+      description: 'дтошка проверки авторизации'
       type: object
       properties:
         email:
@@ -89,8 +123,8 @@ components:
           description: 'Зашифрованный текст'
 
     CommonData:
-      title: Пользователь
-      description: дтошка пользователя
+      title: 'Пользователь'
+      description: 'дтошка пользователя'
       type: object
       properties:
         lastName:
@@ -112,9 +146,33 @@ components:
           type: string
           description: 'Почта'
 
+    CipherToolDto:
+      title: 'Объект для инструмента шифрования'
+      description: 'Объект содержаший информацию о шифровании и дешифровании текста.'
+      type: object
+      required:
+        - keyString
+        - text
+        - operationType
+      properties:
+        keyString:
+          type: string
+          description: 'Открытый/Закрытый ключ в виде строки'
+        text:
+          type: string
+          description: 'Текст для шифрования/дешифрования'
+        operationType:
+          type: string
+          description: 'Тип операции'
+          enum:
+            - decryptByPrivateKey
+            - decryptByPublicKey
+            - encryptByPrivateKey
+            - encryptByPublicKey
+
     PersonDto:
-      title: Пользователь
-      description: дтошка пользователя
+      title: 'Пользователь'
+      description: 'дтошка пользователя'
       type: object
       allOf:
         - $ref: '#/components/schemas/CommonData'
@@ -126,16 +184,31 @@ components:
               type: string
               description: 'Открытый ключ'
 
+    CryptoKeysDto:
+      title: 'Криптографические ключи'
+      description: 'Дтошка открытого и закрытого ключей'
+      required:
+        - publicKey
+        - privateKey
+      type: object
+      properties:
+        publicKey:
+          type: string
+          description: 'Открытый ключ'
+        privateKey:
+          type: string
+          description: 'Закрытый ключ'
+
     VerificationResultDto:
-      title: Пользователь
-      description: дтошка пользователя
+      title: 'Результат верификации'
+      description: 'Дтошка содержащая общую информацию о пользователе'
       type: object
       allOf:
         - $ref: '#/components/schemas/CommonData'
 
     ErrorDto:
       title: ErrorDto
-      description: Описание ошибок
+      description: 'Описание ошибок'
       required:
         - status
       type: object
@@ -145,14 +218,14 @@ components:
         errors:
           type: array
           maxItems: 100
-          description: Перечень ошибок
+          description: 'Перечень ошибок'
           items:
             $ref: '#/components/schemas/ErrorFieldDto'
       additionalProperties: false
 
     StatusDto:
       title: StatusDtoRs
-      description: Статус операции
+      description: 'Статус операции'
       required:
         - code
       type: object
@@ -166,13 +239,13 @@ components:
           maxLength: 255
           minLength: 0
           type: string
-          description: Сообщение
-          example: Ошибка валидации запроса на оплату
+          description: 'Сообщение'
+          example: 'Ошибка валидации запроса на оплату'
       additionalProperties: false
 
     ErrorFieldDto:
       title: ErrorFieldDtoRs
-      description: Описание ошибки
+      description: 'Описание ошибки'
       required:
         - name
         - code
@@ -183,18 +256,18 @@ components:
           maxLength: 255
           minLength: 0
           type: string
-          description: Ключ/название ошибочного поля
+          description: 'Ключ/название ошибочного поля'
         code:
           maxLength: 255
           minLength: 0
           type: string
-          description: Код ошибки
+          description: 'Код ошибки'
         message:
           maxLength: 255
           minLength: 0
           type: string
-          description: Текст ошибки
-          example: Некорректные данные
+          description: 'Текст ошибки'
+          example: 'Некорректные данные'
       additionalProperties: false
 
     Pageable:
