# project-work/eba-service/src/main/java/ru/otus/eba/controller/CryptoController.java
@@ -1,0 +1,26 @@
+package ru.otus.eba.controller;
+
+import lombok.RequiredArgsConstructor;
+import org.springframework.http.ResponseEntity;
+import org.springframework.stereotype.Controller;
+import ru.otus.eba.controller.openapi.CryptoApi;
+import ru.otus.eba.dto.openapi.CipherToolDto;
+import ru.otus.eba.dto.openapi.CryptoKeysDto;
+import ru.otus.eba.service.CryptoService;
+
+@Controller
+@RequiredArgsConstructor
+public  class CryptoController implements CryptoApi {
+
+    private final CryptoService cryptoService;
+
+    @Override
+    public ResponseEntity<CryptoKeysDto> generateKeys() {
+        return ResponseEntity.ok(cryptoService.generateKeys());
+    }
+
+    @Override
+    public ResponseEntity<String> processOperation(CipherToolDto cipherToolDto) {
+        return ResponseEntity.ok(cryptoService.processOperation(cipherToolDto));
+    }
+}
